2009-01-02 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Additions/GNUstepGUI/GSTheme.h:
	* Source/GSThemePanel.m:
	* Source/GSTheme.m: 
	Simplify +initialize.  Set name properly on initialisation.  Hide
	private instance variables to make it easy to add new ones later.
	Refrain from displaying backup versions of themes in selection panel.

2009-01-01 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSToolbar.h,
	* Source/GSToolbar.m: Remove.
	* Source/GNUmakefile: Remove these files.
	* Headers/AppKit/NSToolbar.h,
	* Source/NSToolbar.m: Add code from GSToolbar plus some 10.4 methods.
	* Headers/Additions/GNUstepGUI/GSToolbarView.h,
	* Headers/AppKit/NSToolbarItem.h,
	* Source/GSToolbarView.m,
	* Source/NSWindow+Toolbar.m,
	* Source/NSToolbarItem.m: Change GSToolbar into NSToolbar.

2009-01-01 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSToolbar.h,
	* Source/GSToolbar.m,
	* Source/NSToolbar.m: Remove unused initializer.
	* Source/GSToolbarView.m: Remove method _setToolbar:, code is now
	in setToolbar:.
	* Source/NSWindow+Toolbar.m (-setToolbar:): Adopt to changes in
	GSToolbarView. 

2009-01-01 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Additions/GNUstepGUI/GSTheme.h:
	* Source/GSTheme.m:
	New method to allow the name of a theme to be set rather than being
	derived from the bundle name.  This needed by Thematic.app (and
	perhaps also if we want to support arbitrary names in future).

2008-12-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow+Toolbar.m (-setToolbar:): Clean up the toolbar
	view of the old toolbar.

2008-12-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenu.m
	* Source/NSPopUpButton.m,
	* Source/NSTextView.m,
	* Source/GSNibLoading.m: Add type casts to keep compiler happy.

2008-12-31 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSLayoutManager.h: Add some 10.5 methods.
	* Source/GSLayoutManager.m: Implement them.

2008-12-31 Fred Kiefer <FredKiefer@gmx.de>
